--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -65,6 +65,9 @@
   body {
     @apply bg-background text-foreground font-body antialiased;
   }
+  section {
+    @apply animate-fade-in-slide-up;
+  }
 }
 
 @layer utilities {
