--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -68,6 +68,9 @@
   body {
     @apply bg-background text-foreground;
     font-family: var(--font-inter), sans-serif;
+    -webkit-user-select: none; /* Safari */
+    -ms-user-select: none; /* IE 10+ and Edge */
+    user-select: none; /* Standard syntax */
   }
   .dark body {
     background-image: radial-gradient(circle at top left, hsl(var(--primary) / 0.1), transparent 40%);
